# ethereum-p2p-handshake

./: .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml
key/: initator2
src/: codec.rs  connection.rs  enode.rs  error.rs  lib.rs  mac.rs  main.rs  rlpx.rs  utils.rs
src/ecies/: deterministic_secrtets.rs  initiator.rs  mod.rs  recipient.rs
src/ecies/parties/: initiator.rs  recipient.rs
src/messages/: auth.rs  auth_ack.rs  disconnect.rs  ethstatus.rs  hello.rs  mod.rs  other.rs
src/parties/: initiator.rs  recipient.rs
src/utils/: mod.rs  secrets.rs
