[package]
name = "ethereum-p2p-handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.1"
alloy-primitives = "0.7.6"
argh = "0.1.12"
bytes = "1.6.0"
concat-kdf = "0.1.0"
ctr = "0.9.2"
eyre = "0.6.12"
hmac = "0.12.1"
nom = "7.1.3"
rand = "0.8.5"
secp256k1 = { version = "0.29.0", features = [
  "global-context",
  "rand-std",
  "recovery",
] }
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
alloy-rlp = { version = "0.3.7", features = [ "derive", "arrayvec" ]}
hex = "0.4.3"

[dev-dependencies]
rand_chacha = "0.3.1"
