[package]
name = "ethereum-p2p-handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.1"
alloy-primitives = "0.7.6"
alloy-rlp = { version = "0.3.7", features = ["derive", "arrayvec"]}
argh = "0.1.12"
block-padding = "0.3.3"
byteorder = "1.5.0"
bytes = "1.6.0"
cipher = { version = "0.4.4", features = ["block-padding"]}
concat-kdf = "0.1.0"
ctr = "0.9.2"
digest = "0.10.7"
eyre = "0.6.12"
futures = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
nom = "7.1.3"
rand = "0.8.5"
secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std", "recovery"]}
sha2 = "0.10.8"
sha3 = "0.10.8"
snap = "1.1.1"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "net", "io-util", "fs"]}
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
typenum = "1.17.0"

[dev-dependencies]
rand_chacha = "0.3.1"
